# PR

./: .easignore  .env  .gitignore  .mcp.json  AUTHENTICATION_SETUP.md  CLAUDE.md  CODEX.md  README.md  docker-compose.yml  fix_db.sh  hash_password.js  package-lock.json  run_migration.js  stress_test.sh  vercel.json
.tmp-pg/: package-lock.json
.vercel/: project.json
DB/: README.md  RUN_MIGRATION.md  docker-compose.yaml  events.sql  init-db.sh  payments.sql  run-all-migrations.sh  run-migration.sh  start.sh
docs/: 01-project-overview.md  02-architecture.md  03-frontend.md  04-backend.md  05-database.md  06-api-reference.md  07-development-setup.md  08-data-models.md  09-stripe-payments.md  10-ci-cd-setup.md  APP_STORE_SUBMISSION_READINESS.md  AREA_GROUPING_360_MENU_PLAN.md  AUTHENTICATION_SETUP.md  BACKEND_INFRASTRUCTURE_IMPROVEMENTS.md  CONTRACT_V0.md  DELAYED_CAPTURE_PLAN.md  DEPLOYMENT.md  GARBAGE_COLLECTOR.md  IDEMPOTENCY_GUIDE.md  LOCAL_SETUP_GUIDE.md  MARZIPANO_INTEGRATION_GUIDE.md  MARZIPANO_STATUS.md  MATTERPORT_MATTERTAG_SETUP.md  MATTERPORT_TO_MARZIPANO_MIGRATION.md  (+7 more)
rust_BE/: .env.example  .env.production.example  .env.staging.example  Cargo.toml  Dockerfile  README.env.md  fly.production.toml  fly.staging.toml  fly.toml
rust_BE/src/: handlers.rs  main.rs  models.rs
rust_BE/src/api/: errors.rs  mod.rs
rust_BE/src/api/routers/: areas.rs  auth.rs  clubs.rs  events.rs  genres.rs  mod.rs  owner.rs  payments.rs  reservations.rs  tickets.rs  webhooks.rs
rust_BE/src/application/: analytics_service.rs  area_service.rs  auth_service.rs  club_owner_service.rs  club_service.rs  event_service.rs  genre_service.rs  mod.rs  outbox_service.rs  payment_service.rs  reservation_service.rs  ticket_service.rs
rust_BE/src/bootstrap/: config.rs  migrations.rs  mod.rs  state.rs
rust_BE/src/controllers/: area_controller.rs  auth_controller.rs  club_controller.rs  club_image_controller.rs  club_owner_controller.rs  event_controller.rs  event_image_controller.rs  event_new_controller.rs  genre_controller.rs  mod.rs  payment_controller.rs  table_controller.rs  ticket_controller.rs  webhook_controller.rs
rust_BE/src/idempotency/: mod.rs  models.rs  service.rs
rust_BE/src/infrastructure/: mod.rs
rust_BE/src/infrastructure/analytics/: posthog.rs
rust_BE/src/infrastructure/logging/: mod.rs
rust_BE/src/infrastructure/outbox/: mod.rs
rust_BE/src/infrastructure/repositories/: area_persistence.rs  club_owner_persistence.rs  club_persistence.rs  event_persistence.rs  genre_persistence.rs  mod.rs  payment_persistence.rs  table_persistence.rs  ticket_persistence.rs  user_persistence.rs
rust_BE/src/jobs/: garbage_collector.rs  idempotency_cleanup.rs  mod.rs  outbox_dispatcher.rs  payment_maintenance.rs
rust_BE/src/logging/: mod.rs
rust_BE/src/middleware/: auth.rs  mod.rs  request_id.rs
rust_BE/src/models/: area.rs  club.rs  club_owner.rs  event.rs  event_new.rs  genre.rs  mod.rs  payment.rs  reservation_status.rs  table.rs  ticket.rs  user.rs
rust_BE/src/persistences/: club_owner_persistence.rs  club_persistence.rs  event_new_persistence.rs  event_persistence.rs  genre_persistence.rs  mod.rs  payment_persistence.rs  table_persistence.rs  ticket_persistence.rs  user_persistence.rs
rust_BE/src/services/: event_service.rs  mod.rs  notification_service.rs  payment_scheduler.rs  sms_service.rs  storage_service.rs
rust_BE/src/services/garbage_collector/: events_orphans.rs  mod.rs  payments_orphans.rs  reservation_guests_orphans.rs  reservation_shares_orphans.rs  reservations_orphans.rs  storage.rs  table_images_orphans.rs  tables_orphans.rs  tickets_orphans.rs
rust_BE/src/utils/: jwt.rs
(+255 files in other folders)
