[package]
name = "rust_BE"
version = "0.1.0"
edition = "2024"

[dependencies]
# Axum - Modern, ergonomic web framework (like Express for Node.js)
axum = "0.7"

# Tokio - Async runtime (Rust's async needs a runtime, tokio is the most popular)
# We need "macros" feature for #[tokio::main]
tokio = { version = "1", features = ["full", "macros"] }

# Serde - Serialization/deserialization (JSON handling)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLx - Async SQL toolkit for Postgres
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }

# Tower - Middleware and service utilities (used by Axum internally)
tower = "0.4"

# UUID - For generating unique IDs
uuid = { version = "1", features = ["v4", "serde"] }