[package]
name = "rust_BE"
version = "0.1.0"
edition = "2024"

[dependencies]
# Axum - Modern, ergonomic web framework (like Express for Node.js)
axum = "0.7"

# Tokio - Async runtime (Rust's async needs a runtime, tokio is the most popular)
# We need "macros" feature for #[tokio::main]
tokio = { version = "1", features = ["full", "macros"] }

# Serde - Serialization/deserialization (JSON handling)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rust_decimal = "1.33"

# SQLx - Async SQL toolkit for Postgres
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
chrono = { version = "0.4.42", features = ["serde"] }

# Tower - Middleware and service utilities (used by Axum internally)
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# UUID - For generating unique IDs
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
async-stripe = { version = "*", default-features = false, features = ["runtime-async-std-surf"] }

# Authentication dependencies
bcrypt = "0.15"
jsonwebtoken = "9"
