[package]
name = "rust_BE"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum - Modern, ergonomic web framework (like Express for Node.js)
axum = "0.7"

# Tokio - Async runtime (Rust's async needs a runtime, tokio is the most popular)
# We need "macros" feature for #[tokio::main]
tokio = { version = "1", features = ["full", "macros"] }

# Serde - Serialization/deserialization (JSON handling)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rust_decimal = "1.33"

# SQLx - Async SQL toolkit for Postgres
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
chrono = { version = "0.4.42", features = ["serde"] }

# Tower - Middleware and service utilities (used by Axum internally)
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id"] }

# UUID - For generating unique IDs
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
async-stripe = { version = "*", default-features = false, features = ["runtime-async-std-surf", "checkout"] }

# Authentication dependencies
bcrypt = "0.15"
jsonwebtoken = "9"

# Random number generation (for ticket codes)
rand = "0.8"

# Twilio for SMS verification
reqwest = { version = "0.11", features = ["json"] }

# SHA256 hashing for idempotency request fingerprinting
sha2 = "0.10"

# HMAC + hex for Stripe webhook signature verification
hmac = "0.12"
hex = "0.4"

# Structured logging infrastructure
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "fmt"] }
tracing-appender = "0.2"
